<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <group>
      <item
          android:id="@+id/app_bar_home"
          android:icon="@drawable/adventures_104px"
          android:title="@string/action_home"
          app:showAsAction="always"/>

      <item
          android:id="@+id/app_bar_map"
          android:icon="@drawable/map_marker_96px"
          android:title="@string/action_map"
          app:showAsAction="always"/>
      <item
          android:id="@+id/app_bar_fav"
          android:icon="@drawable/heart_outline_104px"
          android:title="@string/action_favorite"
          app:showAsAction="always"/>


  </group>

    <item
        android:id="@+id/app_bar_notification"
        android:title="@string/action_notifications"
        android:icon="@drawable/bell_104px"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/app_bar_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/administrator_male_white_104px"
        app:showAsAction="ifRoom"/>


</menu>