<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/framelayout"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                android:padding="5dp"
                android:layout_margin="2dp"
                app:cardCornerRadius="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:orientation="horizontal">
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="50dp"
                            android:layout_height="60dp"
                            android:id="@+id/profile"
                            android:src="@drawable/administrator_male_26px"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="5dp"
                            android:layout_margin="5dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:id="@+id/username"
                                android:fontFamily="@font/work_sans_semibold"
                                android:text="@string/user_text"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:id="@+id/date"
                                android:text="@string/event_date"
                                android:fontFamily="@font/work_sans_medium"/>
                        </LinearLayout>

                    </LinearLayout>

                    <ImageView
                        android:layout_width="400dp"
                        android:layout_height="300dp"
                        android:src="@drawable/add_image"
                        android:id="@+id/image"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="5dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:fontFamily="@font/work_sans_semibold"
                            android:id="@+id/title"
                            android:textStyle="bold"
                            android:text="@string/title"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:id="@+id/description"
                            android:fontFamily="@font/work_sans_medium"
                            android:textStyle="italic"
                            android:text="@string/description"/>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:orientation="horizontal">
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:id="@+id/gallery"
                            android:text="@string/gallery"/>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:id="@+id/chat"
                            android:layout_marginStart="80dp"
                            android:text="@string/chat"/>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>




        </LinearLayout>
    </ScrollView>
</FrameLayout>