<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileSetupActivity"
    android:background="@color/colorBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="2dp"
     >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="5dp"
            android:id="@+id/card"
            app:cardElevation="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_margin="20dp"
                    android:id="@+id/profile_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/administrator_male_26px" />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/work_sans_medium"
                    android:padding="5dp"
                    android:id="@+id/text"
                    android:text="@string/click_to_edit"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            android:padding="10dp"
            app:cardElevation="0dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_text"
                android:textColorHint="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
               >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/work_sans_semibold" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/about_me"
                android:textColorHint="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:counterEnabled="true"
                app:boxStrokeColor="@color/colorPrimary"
                app:counterMaxLength="300">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/work_sans_semibold" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/pen_26px"
            app:backgroundTint="@color/colorAccent"
            app:backgroundTintMode="@color/colorAccent"
            android:text="@string/save"/>



    </LinearLayout>


</RelativeLayout>