<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:padding="10dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_margin="1dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="20dp"
            android:background="#ffffff">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:textColorHint="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:counterEnabled="true"
                app:counterMaxLength="20">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/title_et"
                    android:textSize="12sp"
                    android:layout_height="wrap_content">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:textColorHint="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:counterEnabled="true"
                app:counterMaxLength="300">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/desc_et"
                    android:textSize="12sp"
                    android:layout_height="wrap_content">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SET DATE"
                android:textSize="12sp"
                android:id="@+id/btn_date"
                android:layout_alignBottom="@+id/in_date"
                android:layout_toRightOf="@+id/in_date"
                android:layout_toEndOf="@+id/in_date" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SET TIME"
                android:textSize="12sp"
                android:id="@+id/btn_time"
                android:layout_below="@+id/btn_date"
                android:layout_alignLeft="@+id/btn_date"
                android:layout_alignStart="@+id/btn_date" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/add_image"
                android:src="@drawable/add_image">

            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/click_to_edit"></TextView>


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/scrollView"
                android:src="@drawable/add"
                android:layout_margin="10dp"
                android:padding="2dp"
                android:id="@+id/upload"

                app:civ_circle_background_color="@color/colorAccent"
                >

            </de.hdodenhof.circleimageview.CircleImageView>


        </LinearLayout>

    </ScrollView>



</RelativeLayout>