<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.accountFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"/>

        <!--Top Header Layout-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:backgroundTint="#ffffff"
               >

                <!--Top Profile Section -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circular_border_solid"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="2dp"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        app:cardBackgroundColor="#ffffff"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center"
                            android:padding="5dp">
                            <de.hdodenhof.circleimageview.CircleImageView
                                android:id="@+id/profile_image"
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_gravity="center"/>


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/work_sans_semibold"
                            android:text=""
                            android:textColor="@color/colorPrimary"
                            android:id="@+id/username"
                            android:textSize="18sp"
                            android:textStyle="bold" />



                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="2dp"
                       >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center"
                           >
                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"

                                android:src="@drawable/place_marker_26px" />


                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/work_sans_semibold"
                                    android:text="0"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="12sp"
                                    android:textStyle="bold" />


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="2dp"
                                    android:fontFamily="@font/work_sans_medium"
                                    android:text="@string/uploads"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="12sp" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="center"
                            >

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:src="@drawable/heart_outline_26px" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="0"
                                    android:fontFamily="@font/work_sans_semibold"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="12sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="2dp"
                                    android:fontFamily="@font/work_sans_medium"
                                    android:text="@string/favorites"
                                    android:textColor="@color/colorPrimary"
                                    android:textSize="12sp" />
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <!--About Me Card-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/circular_border_solid"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/work_sans_semibold"
                                android:text="@string/about_me"
                                android:textColor="@color/colorPrimary"
                                android:textSize="13sp"
                                android:textStyle="bold" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:fontFamily="@font/work_sans_semibold"
                                android:text="Edit"
                                android:id="@+id/edit"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="13sp" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:id="@+id/about"
                            android:fontFamily="@font/work_sans_medium"
                            android:text=""
                            android:textColor="@color/colorPrimary" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>





        </ScrollView>
    </RelativeLayout>



</FrameLayout>